[gd_scene load_steps=7 format=3 uid="uid://42q10u51f3rg"]

[ext_resource type="Script" uid="uid://dxcv11ayhvg7n" path="res://world.gd" id="1_aqk2v"]
[ext_resource type="Texture2D" uid="uid://daubou1hjfp0n" path="res://sprites/background.png" id="1_f3sb7"]
[ext_resource type="PackedScene" uid="uid://cfrp3esrym75r" path="res://entities/wall_sections.tscn" id="2_tlwt5"]
[ext_resource type="Script" uid="uid://dx7brxm65no6s" path="res://scripts/walls_group.gd" id="3_036b0"]
[ext_resource type="PackedScene" uid="uid://bbi7hlbnvxilf" path="res://entities/player.tscn" id="3_aqk2v"]
[ext_resource type="PackedScene" uid="uid://br05r675j4a77" path="res://entities/game_ui.tscn" id="6_dwbse"]

[node name="World" type="Node2D"]
script = ExtResource("1_aqk2v")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(337.5, 288)
scale = Vector2(1.77315, 1.5)
texture = ExtResource("1_f3sb7")

[node name="WallsGroup" type="Node2D" parent="."]
script = ExtResource("3_036b0")

[node name="Wall1" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, 1008)

[node name="Wall2" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, 720)
animation = &"2"
current_section = 2

[node name="Wall3" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, 432)
animation = &"3"
current_section = 3

[node name="Wall4" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, 144)
animation = &"4"
current_section = 4

[node name="Wall5" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, -144)

[node name="Wall6" parent="WallsGroup" instance=ExtResource("2_tlwt5")]
position = Vector2(324, -431)
current_section = 2

[node name="Player" parent="." instance=ExtResource("3_aqk2v")]
position = Vector2(324, 1000)

[node name="UI" parent="." instance=ExtResource("6_dwbse")]
